--- a/style.css
+++ b/style.css
@@ -11,19 +11,19 @@
 body {
     height: 100vh;
     display: grid;
-    grid-template-columns: 2fr 7fr;
+    grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 4fr;
 }
 
 .header, .sidebar, .main {
+    display: grid;
+    padding: 30px;
     border: 2px solid black;
 }
 
 .sidebar { 
     grid-column: 1;
     grid-row: 1 / 3;
-    padding: 30px;
-    display: grid;
     grid-template-rows: repeat(3, min-content); 
     gap: 25px;
     background-color: var(--red);
@@ -37,18 +37,12 @@ body {
     gap: 10px;
 }
 
-.dashboard-logo {
-    gap: 10px;
-    font-size: 1.5em;
-}
-
-#dashboard-icon {
+.dashboard-logo, #dashboard-icon {
     font-size: 1.5em;
 }
 
 .general-menu, .configurations-menu {
     grid-auto-flow: column;
-    gap: 10px;
     font-size: 1.25em;
 }
 
@@ -61,21 +55,61 @@ body {
 }
 
 .header {
-    padding: 30px;
-    display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr;
     align-items: center;
-    background-color: green;
-
+    gap: 25px;
+    background-color: var(--green);
+    color: var(--text-white);
+    font-size: 1.25em;
 }
 
+img {
+    height: 75px;
+    border: 3px solid gray;
+    border-radius: 50%;
+}
+
+.search-box-and-profile{
+    grid-column: span 2;
+}
+
+.search-box-and-profile, .welcome-message {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.empty-search-bar{
+    background-color: white;
+    height: 20px;
+    width: 100%;
+    border-radius: 100px;
+}
+
+.search-box-and-profile > img {
+    height: 50px;
+}
+
+.search-box-and-profile > div {
+    text-wrap: nowrap;
+}
+
+.upload-button {
+    justify-self: end;
+}
+
+.upload-button > button {
+    background-color: white;
+    height: 50px;
+    width: 100px;
+    border-radius: 50px;
+}
+
+
 .main {
-    padding: 30px;
-    display: grid;
     grid-template-columns: 5fr 2fr;
     grid-template-rows: repeat(2, 1fr);
-    gap: 10px;
     background-color: yellow;
 }
 
