--- a/style.css
+++ b/style.css
@@ -6,6 +6,23 @@
 
 * {
     margin: 0;
+    font-family: "Lato", sans-serif;
+}
+
+h3 {
+    font-size: 1.8em;
+}
+
+h5 {
+    font-size: 1.3em;
+}
+
+p {
+    font-size: 1.1em;
+}
+
+.material-symbols-outlined {
+    font-size: 1.75rem;
 }
 
 body {
@@ -19,13 +36,13 @@ body {
     display: grid;
     padding: 30px;
     border: 2px solid black;
+    gap: 25px;
 }
 
 .sidebar { 
     grid-column: 1;
     grid-row: 1 / 3;
     grid-template-rows: repeat(3, min-content); 
-    gap: 25px;
     background-color: var(--red);
     color: var(--text-white);
 }
@@ -37,13 +54,17 @@ body {
     gap: 10px;
 }
 
-.dashboard-logo, #dashboard-icon {
+.dashboard-logo {
+    font-size: 1.75em;
+} 
+
+#dashboard-icon {
     font-size: 1.5em;
 }
 
-.general-menu, .configurations-menu {
+.general-menu, .configurations-menu, .search-box-and-profile{
     grid-auto-flow: column;
-    font-size: 1.25em;
+    font-size: 1.5em;
 }
 
 .general-menu {
@@ -61,7 +82,6 @@ body {
     gap: 25px;
     background-color: var(--green);
     color: var(--text-white);
-    font-size: 1.25em;
 }
 
 img {
@@ -106,20 +126,38 @@ img {
     border-radius: 50px;
 }
 
-
 .main {
     grid-template-columns: 5fr 2fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content);
     background-color: yellow;
+}
+
+.main > div {
+    display: grid;
+    gap: 25px;
+}
+
+.info-cards {
+    background-color: antiquewhite;
+    border-left: 7.5px solid blue;
+    border-radius: 7.5px;
+    display: grid;
+    grid-template-rows: repeat(2, min-content);
+    gap: 10px;
+    align-items: center;
+    padding: 10px;
 }
 
 .club-news {
     grid-row: span 2;
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: min-content repeat(3, 1fr);
 }
 
 .club-news > h3 {
     grid-column: span 2;
+}
+
+.club-news > div {
+
 }
