--- a/style.css
+++ b/style.css
@@ -10,26 +10,27 @@
 }
 
 h3 {
-    font-size: 1.8em;
+    font-size: 1.7em;
 }
 
 h5 {
-    font-size: 1.3em;
+    font-size: 1.2em;
 }
 
 p {
-    font-size: 1.1em;
+    font-size: 1em;
 }
 
 .material-symbols-outlined {
-    font-size: 1.75rem;
+    font-size: 1.7rem;
 }
 
 body {
     height: 100vh;
+    width: 100%;
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 1fr 5fr;
 }
 
 .header, .sidebar, .main {
@@ -64,7 +65,7 @@ body {
 
 .general-menu, .configurations-menu, .search-box-and-profile{
     grid-auto-flow: column;
-    font-size: 1.5em;
+    font-size: 1.4em;
 }
 
 .general-menu {
